# first-person

./: .gitignore  CMakeLists.txt  first-person.sln
first-person/: CMakeLists.txt  Player.cpp  Player.h  first-person.vcxproj  first-person.vcxproj.filters  main.cpp  shader.frag  shader.geom  shader.vert
first-person/util/: FPS.cpp
resources/levels/: level.txt  newlvl.txt
src/: main.cpp
src/entities/: Player.cpp  Player.h
src/geometry/: Region.h  Sector.cpp  Sector.h  Wall.cpp  Wall.h  WallArray.cpp  WallArray.h
src/helpers/: split.cpp
src/shaders/: shader.frag  shader.geom  shader.vert
src/util/: FPS.h  returnline.cpp
